# list.desktop

./: CMakeLists.txt  README.md  list.desktop  main.c  resources.c
resources/: resources.xml  template.ui
